fixes and refinement

--- a/apps/login/templates/login/success.html
+++ b/apps/login/templates/login/success.html
@@ -16,7 +16,7 @@
             {% endfor %}
         {% endif %}
 
-        <h1> Welcome, __you've been logged in, ({{ user }})! </h1>
+        <h1> Welcome, {{ user }} you've been logged in! </h1>
 
     <a href="logout"><button class="aButton" formmethod=GET formaction="/" >Logout</button></a>
     </div>
