--- a/apps/login/templates/login/index.html
+++ b/apps/login/templates/login/index.html
@@ -70,7 +70,7 @@
                 {% csrf_token %}
                 {% if messages %}
                     {% for message in messages %}
-                        {% if "login" in message.tags %}
+                        {% if "login" in message.tags or "session" in message.tags %}
                             <h6>{{ message }}</h6>
                         {% endif %}
                     {% endfor %}
