fixed logout link

--- a/apps/login/templates/login/create_item.html
+++ b/apps/login/templates/login/create_item.html
@@ -9,8 +9,8 @@
     <title>Create Item</title>
 </head>
 <body>
-        <a href="dashboard">Home</a>
-        <a href="logout">Logout</a>
+        <a href="/login/dashboard">Home</a>
+        <a href="/login/logout">Logout</a>
     <div>
         <h1>Create a New Wish List Item</h1>
         <form id=form action='create' method='POST'>
