--- a/apps/login/templates/login/dashboard.html
+++ b/apps/login/templates/login/dashboard.html
@@ -9,7 +9,7 @@
     <title>My Wish List</title>
 </head>
 <body>
-    <a href="logout">Logout</a>
+    <a href="/login/logout">Logout</a>
     <div>
         <h1> Hello, {{ user }}! </h1>
         {% if messages%}
