--- a/apps/login/templates/login/display_item.html
+++ b/apps/login/templates/login/display_item.html
@@ -9,8 +9,8 @@
     <title>{{ item.name }}</title>
 </head>
 <body>
-        <a href="dashboard">Home</a>
-        <a href="logout">Logout</a>
+        <a href="/login/dashboard">Home</a>
+        <a href="/login/logout">Logout</a>
     <div>
         <h1>Item: {{ item.name }} </h1>
         <h3>Users who added this product/item under their wish list.</h3>
